# aldons-crossing-rust

./: .gitignore  .prettierignore  Cargo.toml  README.md  TODO  Taskfile.yaml
src/: actor.rs  body.rs  buttons.rs  cast.rs  combat.rs  condition.rs  draw.rs  fog.rs  game.rs  js.rs  lib.rs  search.rs  stage.rs  stats.rs
src/data/: maps.json  maps_fathers_day.json  mod.rs  props.json  spells.json  spritesheet.json
src/thrift/: mod.rs  save.rs  save.thrift  util.rs
web/: _headers  dialog.js  game.js  index.html  main.js  manifest.json  menu.js  sw.js
web/css/: fonts.css
