[package]
name = "aldons-crossing"
version = "0.1.0"
authors = ["Michael Stevens"]
description = "A top down RPG game."
license = "GNU GPL"
repository = "https://github.com/viruslobster/aldons-crossing-rust"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true

[lib]
name = "aldonlib"
crate-type = ["cdylib"]

[dependencies]
wee_alloc = { version = "0.4", optional = true }
js-sys = "0.3.61"
once_cell = "1.17.1"
serde = "1.0.157"
serde_derive = "1.0.157"
serde_json = "1.0.94"
wasm-bindgen = "0.2"
futures = "0.3"
base64 = "0.21.0"
rand = "0.8.5"
bincode = "1.3.3"
serde_with = "3.2.0"
thrift = "0.17.0"

[dependencies.web-sys]
version = "0.3.61"
features = ["Document", "Window", "Element", "HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement", "TextMetrics", "OffscreenCanvas", "OffscreenCanvasRenderingContext2d", "ImageBitmap", "DomMatrix", "ContextAttributes2d", "CssStyleDeclaration", "Storage"]

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[features]
default = ["wee_alloc"]
